...
  @override
  Widget build(BuildContext context) {
    final destinations = [
      (
        icon: CupertinoIcons.house,
        selectedIcon: CupertinoIcons.house_fill,
        en: 'Home',
        ar: 'الرئيسية',
      ),
      (
        icon: CupertinoIcons.doc_text,
        selectedIcon: CupertinoIcons.doc_text_fill,
        en: 'Orders',
        ar: 'الطلبات',
      ),
      (
        icon: CupertinoIcons.creditcard,
        selectedIcon: CupertinoIcons.creditcard_fill,
        en: 'Wallet',
        ar: 'المحفظة',
      ),
      (
        icon: CupertinoIcons.bell,
        selectedIcon: CupertinoIcons.bell_fill,
        en: 'Inbox',
        ar: 'الإشعارات',
      ),
      (
        icon: CupertinoIcons.person_crop_circle,
        selectedIcon: CupertinoIcons.person_crop_circle_fill,
        en: 'Profile',
        ar: 'حسابي',
      ),
    ];

    final children = List.generate(destinations.length, (index) {
      final destination = destinations[index];
...
